Add initial files

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>SurfNewsletter Signup</h1>
-        <form id="signup-form" action="/submit_email" method="post">
+        <form id="signup-form">
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
             <button type="submit">Surf Up</button>
-        </form>        
+        </form>
     </div>
     <script src="script.js"></script>
 </body>
